# nonebot-desktop

./: .gitignore  .lintstagedrc  .stylelintrc  README.md  bun.lockb  eslint.config.js  eslint.config.ts  index.html  package.json  tsconfig.json  tsconfig.node.json  unocss.config.ts  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/controls/: WindowControlsMacOs.vue  WindowTitlebar.vue
src/styles/: main.css
